Update Dockerfile and README for xk6-tcp-throttling integration

--- a/Dockerfile.k6
+++ b/Dockerfile.k6
@@ -1,10 +1,11 @@
-FROM golang:1.21-alpine AS builder
+FROM golang:1.25-alpine AS builder
 
+RUN apk add --no-cache git
 RUN go install go.k6.io/xk6/cmd/xk6@latest
 
 WORKDIR /build
 COPY . .
-RUN xk6 build --with github.com/skyloud/xk6-tcp-throttle=.
+RUN xk6 build --with github.com/skyloud/xk6-tcp-throttling
 
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
