--- a/tests/Dockerfile.k6
+++ b/tests/Dockerfile.k6
@@ -5,7 +5,7 @@ RUN go install go.k6.io/xk6/cmd/xk6@latest
 
 WORKDIR /build
 COPY . .
-RUN xk6 build --with github.com/skyloud/xk6-tcp-throttling --output k6
+RUN xk6 build --with github.com/skyloud/xk6-tcp-throttling@latest --output k6
 CMD ["./k6", "run", "--out", "json=/results/results.json", "test-script.js"]
 
 # FROM alpine:latest
